fixes issue where the dropdown arrow icon overflowed outside the combo box

--- a/src/styles/combo-box.scss
+++ b/src/styles/combo-box.scss
@@ -10,12 +10,17 @@
     border-radius: 4px;
   }
 
+  .input-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
   input {
-    border: 1px solid transparent;
-    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
     font-size: 14px;
+    padding: 10px 30px 10px 10px;
     width: 100%;
     box-sizing: border-box;
     outline: none;
@@ -31,15 +36,12 @@
     }
   }
 
-  .input-icon-wrapper {
-    display: flex;
-
-    svg {
-      position: relative;
-      right: 25px;
-      top: 10px;
-      pointer-events: none;
-    }
+  svg {
+    position: absolute;
+    right: 10px;
+    pointer-events: none;
+    font-size: 16px;
+    color: #555;
   }
 
   .combo-box-options {
@@ -47,7 +49,6 @@
     top: 100%;
     left: 0;
     right: 0;
-    width: 235px;
     max-height: 200px;
     overflow-y: auto;
     border: 1px solid #ccc;
@@ -57,7 +58,6 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
     .combo-box-option {
-      border: 1px solid transparent;
       padding: 10px;
       font-size: 14px;
       cursor: pointer;
@@ -78,12 +78,6 @@
 
       &.focused {
         background-color: #e4e4e4;
-        border: 1px solid #002d5d;
-        outline: none;
-      }
-
-      &.selected.focused {
-        background-color: #0056b3;
         border: 1px solid #002d5d;
         outline: none;
       }
